apps/jitsi/k8s/jvb.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jitsi-jvb
  namespace: jitsi
spec:
  type: ClusterIP
  selector:
    app: jitsi-jvb
  ports:
    - name: colibri
      protocol: TCP
      port: 8080
      targetPort: colibri
