apps/jitsi/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jitsi
  namespace: jitsi
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
  hostnames:
    - meet.biplane.v6.rocks
  rules:
    - backendRefs:
        - name: jitsi-web
          port: 80
